--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -27,7 +27,7 @@ body {
 
 a {
   color: #7b9d6f;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 ol, ul, li{
@@ -222,7 +222,7 @@ Main Components
   -ms-transform: translateX(-50%) translateY(-50%);
   -o-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background: url(../img/cd-arrow.svg) no-repeat 0 0;
+  background: url('/assets/imgs/right-arrow.svg') no-repeat 0 0;
 }
 .cd-timeline-navigation a.prev {
   left: 0;
@@ -485,6 +485,7 @@ Main Components
 
 .img-high{
   width: 350px;
+  margin-bottom: 50px;
 }
 
 .ui-loader{
